--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>MainPage</title>
     <link rel="stylesheet" href="mystyle.css">
+    <script src="api.js"></script>
 </head>
 <body style="background-color: black;">
 <div class="main">
@@ -272,7 +273,7 @@
 </script>
 
 <script>
-    var unirest = require("unirest");
+/*    var unirest = require("unirest");
 
     var req = unirest("GET", "https://imdb8.p.rapidapi.com/title/auto-complete");
 
@@ -291,7 +292,7 @@
         if (res.error) throw new Error(res.error);
 
         console.log(res.body);
-    });
+    }); */
 </script>
 
 </body>
