--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="logoDiv">
             <div class="logo">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png">
+                <a class = "logo" href="#WatchMovies"><img class = "logoImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png"></a>
             </div>
 
             <div class="search">
@@ -69,7 +69,7 @@
 
         <div class="whatToWatch">
             <h1>What To Watch</h1>
-            <input type="button" onclick="showMoviesList()" value="Browse our What to Watch page">
+            <a href="#WatchMovies"> <input type="button" value="Browse our What to Watch page"> </a>
         </div>
 
         <div class="fromYourWatchList">
@@ -127,46 +127,5 @@
         <h4> © 2021 by IMDb.com, Inc.</h4>
     </div>
 </div>
-
-<script>
-    var slideIndex4 = 3;
-    showDivs4(slideIndex4);
-
-    function plusDivs4(n) {
-        showDivs4(slideIndex4 += n);
-    }
-
-    function showDivs4(n) {
-        var i;
-        var x = document.getElementsByClassName("images3");
-        if (n > x.length) {
-            slideIndex4 = 3
-        }
-        if (n < 1) {
-            slideIndex4 = x.length
-        }
-        for (i = 0; i < x.length; i += 1) {
-            x[i].style.display = "none";
-        }
-        if ((slideIndex4 - 1) < 0) {
-            x[slideIndex4 % 3 - 1].style.display = "block";
-        } else {
-            x[slideIndex4 - 1].style.display = "block";
-        }
-        if ((slideIndex4 - 2) < 0) {
-            x[slideIndex4 % 3 - 2].style.display = "block";
-        } else {
-            x[slideIndex4 - 2].style.display = "block";
-        }
-        if ((slideIndex4 - 3) < 0) {
-            x[slideIndex4 % 3 - 3].style.display = "block";
-        } else {
-            x[slideIndex4 - 3].style.display = "block";
-        }
-    }
-</script>
-</body>
-</html>
-
 </body>
 </html>
