--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="header">
         <div class="logoDiv">
             <div class="logo">
-                <a class = "logo" href="#WatchMovies"><img class = "logoImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png"></a>
+                <a class="logo" href="#WatchMovies"><img class="logoImage"
+                                                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png"></a>
             </div>
 
             <div class="search">
@@ -33,22 +34,10 @@
     <div class="content">
         <div class="movies">
             <div class="images">
-                <button class="display-left" style="margin-right: 5px;" onclick="plusDivs(-1)">&#10094;</button>
-                <img class="mainImage"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <button class="display-right" style="margin-left: 5px;" onclick="plusDivs(1)">&#10095;</button>
             </div>
             <div class="upNext">
                 <h1>Up next</h1>
                 <div class="trailers">
-                    <button class="display-left" onclick="plusDivs2(-3)">&#10094;</button>
-                    <img class="trailerImage"
-                         src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                    <img class="trailerImage"
-                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSppDgk99BKVA4TJtWc1FN4-HUkdWrFNfMm1-M0nQ01sIOcbTZu">
-                    <img class="trailerImage"
-                         src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                    <button class="display-right" onclick="plusDivs2(3)">&#10095;</button>
                 </div>
             </div>
         </div>
@@ -56,14 +45,6 @@
         <div class="featuredToday">
             <h1> Featured Today </h1>
             <div class="featuredTodayImages">
-                <button class="display-left" onclick="plusDivs3(-3)">&#10094;</button>
-                <img class="images2"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <img class="images2"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <img class="images2"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <button class="display-right" onclick="plusDivs3(3)">&#10095;</button>
             </div>
         </div>
 
@@ -90,18 +71,6 @@
                 <input type="button" value="Fan Favorites">
             </div>
             <div class="trailers2">
-                <button class="display-left" onclick="plusDivs4(-3)">&#10094;</button>
-                <img class="images3"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <img class="images3"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <img class="images3"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <img class="images3"
-                     src="https://upload.wikimedia.org/wikipedia/en/b/be/The_Lord_of_the_Rings_-_The_Return_of_the_King_%282003%29.jpg">
-                <img class="images3"
-                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSppDgk99BKVA4TJtWc1FN4-HUkdWrFNfMm1-M0nQ01sIOcbTZu">
-                <button class="display-right" onclick="plusDivs4(3)">&#10095;</button>
             </div>
         </div>
 
