--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="header">
         <div class="logoDiv">
             <div class="logo">
-                <a class="logo" href="#WatchMovies"><img class="logoImage"
-                                                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png"></a>
+                <a class="logo" href="#"><img class="logoImage"
+                                              src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/IMDB_Logo_2016.svg/1200px-IMDB_Logo_2016.svg.png"></a>
             </div>
 
             <div class="search">
@@ -68,7 +68,7 @@
         <div class="fanFavorites">
             <div class="fanFavorites2">
                 <div class="line"></div>
-                <input type="button" value="Fan Favorites">
+                <a href="#FanFavouriteMovies"><input type="button" value="Fan Favourites"> </a>
             </div>
             <div class="trailers2">
             </div>
@@ -79,7 +79,7 @@
             <h3>IMDb helps you select the perfect next show or movie to watch.</h3>
             <div class="buttons">
                 <input type="button" value="Watch Guide">
-                <input type="button" value="Most Popular" style="margin-left: 40px">
+                <a href="#PopularMovies"><input type="button" value="Most Popular" style="margin-left: 40px"> </a>
             </div>
         </div>
 
