--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </div>
 
             <div class="search">
-                <input type="text" value="search IMDB">
+                <input id = "search" type="text" placeholder="search IMDB">
+                <button onclick="searchMovie()" id = "search-button" type="submit">Submit</button>
             </div>
         </div>
 
