--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../mystyle.css">
-    <script type="module" src="./UrlRouting/UrlRouting.js"></script>
+    <link rel="stylesheet" href="mystyle.css">
+    <script type="module" src="Modules/UrlRouting/UrlRouting.js"></script>
     <title>MainPage</title>
 </head>
 <body style="background-color: black;">
