--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5; URL=https://mdzam18.github.io./#/" />
     <link rel="stylesheet" href="mystyle.css">
     <script type="module" src="Modules/UrlRouting/UrlRouting.js"></script>
     <title>MainPage</title>
