--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         locationHashChanged()
     </script>
     <script type="module" src="Modules/MainPage/PlusDivs.js"></script>
-    <script>
-
-    </script>
+    <script type="module" src="Modules/MovieInfoPage/ShowMovieInfo.js"></script>
     <title>MainPage</title>
 </head>
 <body style="background-color: black;">
