--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module">
         import {locationHashChanged} from "./Modules/UrlRouting/UrlRouting.js";
         window.location.hash = '#/'
-        locationHashChanged()
+        locationHashChanged();
     </script>
     <script type="module" src="Modules/MainPage/PlusDivs.js"></script>
     <script type="module" src="Modules/MovieInfoPage/ShowMovieInfo.js"></script>
