--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="module" src="Modules/MovieInfoPage/ShowMovieInfo.js"></script>
     <title>MainPage</title>
 </head>
+<script type="module" src="Modules/MainPage/PlusDivs.js"></script>
 <body style="background-color: black;">
 <div class="main">
     <div class="header">
