--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="fromYourWatchList">
             <div class="wathcListButton">
                 <div class="line"></div>
-                <input type="button" value="Watch list">
+                <a href="#watchList"><input type="button" value="Watch list"></a>
             </div>
             <p> access Watchlist </p>
             <p>
