--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
 <script type="module" src="Modules/UrlRouting/UrlRouting.js"></script>
 <script type="module">
     import {locationHashChanged} from "./Modules/UrlRouting/UrlRouting.js";
-    console.log(window.location.hash);
-    if(window.location.hash === "") {
-        window.location.hash = '#/'
-    }
+    window.location.hash = '#/';
     locationHashChanged();
 </script>
 <script type="module" src="Modules/MovieInfoPage/ShowMovieInfo.js"></script>
